--- a/package.json
+++ b/package.json
@@ -12,32 +12,16 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "@walletconnect/web3-provider": "^1.7.7",
-    "bignumber.js": "^9.0.2",
-    "buffer": "^6.0.3",
-    "date-fns": "^2.28.0",
-    "graphql": "^16.3.0",
-    "https-browserify": "^1.0.0",
     "i18next-http-backend": "^1.4.0",
-    "moralis": "^1.5.8",
     "next": "12.1.0",
     "next-i18next": "^10.5.0",
-    "os-browserify": "^0.3.0",
-    "process": "^0.11.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-moralis": "^1.3.5",
     "react-redux": "^7.2.6",
     "redux-devtools-extension": "^2.13.9",
-    "reselect": "^4.1.5",
-    "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0",
-    "url": "^0.11.0",
-    "web3": "^1.7.1",
-    "web3modal": "^1.9.5"
+    "reselect": "^4.1.5"
   },
   "devDependencies": {
-    "@apollo/client": "^3.5.10",
     "@babel/core": "^7.17.8",
     "@storybook/addon-actions": "^6.4.19",
     "@storybook/addon-essentials": "^6.4.19",
@@ -48,7 +32,6 @@
     "@storybook/manager-webpack5": "^6.4.19",
     "@storybook/react": "^6.4.19",
     "@storybook/testing-library": "^0.0.9",
-    "@types/date-fns": "^2.6.0",
     "@types/node": "17.0.21",
     "@types/react": "17.0.41",
     "@types/react-redux": "^7.1.23",
@@ -70,7 +53,6 @@
     "postcss-loader": "^6.2.1",
     "prettier": "^2.6.0",
     "simple-git-hooks": "^2.7.0",
-    "storybook-addon-apollo-client": "^4.0.11",
     "storybook-addon-i18n": "^5.1.13",
     "storybook-addon-next-router": "^3.1.1",
     "style-loader": "^3.3.1",
