--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "17.0.2",
     "react-redux": "^7.2.6",
     "redux-devtools-extension": "^2.13.9",
-    "reselect": "^4.1.5"
+    "reselect": "^4.1.5",
+    "bignumber.js": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
