--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "bignumber.js": "^9.0.1",
     "i18next-http-backend": "^1.4.0",
     "next": "12.1.0",
     "next-i18next": "^10.5.0",
@@ -19,8 +21,7 @@
     "react-dom": "17.0.2",
     "react-redux": "^7.2.6",
     "redux-devtools-extension": "^2.13.9",
-    "reselect": "^4.1.5",
-    "bignumber.js": "^9.0.1"
+    "reselect": "^4.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
